--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^20.11.5",
     "eslint": "^8.56.0",
     "nuxt": "^3.9.3",
+    "pinceau": "^0.18.10",
     "release-it": "^16.3.0",
     "typescript": "^5.3.3",
     "vite-plugin-inspect": "^0.8.1",
