--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxt-themes/tokens": "^1.9.1",
     "@nuxt-themes/typography": "^0.8.0",
     "@nuxt/content": "^3.4.0",
+    "@nuxt/image": "^1.10.0",
     "@nuxt/ui-templates": "^1.3.4",
     "@nuxthq/studio": "^0.14.1",
     "@vueuse/core": "^10.7.2",
