--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -14,6 +14,7 @@
     "@nuxt/devtools": "^1.0.8",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/plausible": "^0.2.4",
+    "@pinegrow/nuxt-module": "^3.0.69",
     "@types/node": "^20.11.24",
     "eslint": "^8.57.0",
     "nuxt": "^3.10.3"
